# OdysseyRadio

./: CMakeLists.txt  README.md  main.cpp
CSVManaging/: Reader.cpp  Reader.h
Interface/: MP3Player  MP3Player.pro  Makefile  mainMP3.cpp  moc_widget.cpp  ui_widget.h  widget.cpp  widget.h  widget.ui
Lists/: ArtistList.cpp  ArtistList.h  ArtistNode.cpp  ArtistNode.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  SongList.cpp  SongList.h  SongNode.cpp  SongNode.h
Metadata/: checksums
